fix: add doppler details to root config file

--- a/chezmoi.yaml.tmpl
+++ b/chezmoi.yaml.tmpl
@@ -1,2 +1,5 @@
+doppler:
+  project: "example-project"
+  config: "dev_personal"
 hooks.read-source-state.pre:
   command: ".local/share/chezmoi/.init.sh"
