fix: add `id` props to access distro name

--- a/run_onchange_arch-install-packages.sh.tmpl
+++ b/run_onchange_arch-install-packages.sh.tmpl
@@ -1,4 +1,4 @@
-{{ if eq .chezmoi.osRelease "arch" -}}
+{{ if eq .chezmoi.osRelease.id "arch" -}}
 #!/bin/bash
 
 yay -S --needed {{ range .packages.arch -}}{{ . | quote }} {{ end }}
