feat: add tmux kill server keybind

--- a/dot_config/tmux/tmux.conf.tmpl
+++ b/dot_config/tmux/tmux.conf.tmpl
@@ -11,6 +11,7 @@ bind -n M-L next-window
 bind v "split-window -c '#{pane_current_path}'"
 bind h "split-window -h -c '#{pane_current_path}'"
 bind u "neww -c '#{pane_current_path}'"
+bind C-k "kill-server"
 
 # config bugs out for some reason, manually declare the keybinds instead
 bind l "last-window"
