--- a/dot_config/tmux/tmux.conf.tmpl
+++ b/dot_config/tmux/tmux.conf.tmpl
@@ -60,7 +60,7 @@ set -g @plugin 'sainnhe/tmux-fzf'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-strategy-nvim 'session'
 
-source-file ~/.config/tmux/theme.conf
+source-file ~/.config/tmux/theme-vague.conf
 
 set -g status-position top
 
